--- a/Resources/Prototypes/Recipes/Lathes/sheet.yml
+++ b/Resources/Prototypes/Recipes/Lathes/sheet.yml
@@ -16,6 +16,7 @@
 
 - type: latheRecipe
   id: SheetGlass1
+  result: SheetGlass1
   completetime: 0
   materials:
     RawQuartz: 100
@@ -47,6 +48,7 @@
 
 - type: latheRecipe
   id: SheetPGlass1
+  result: SheetPGlass1
   completetime: 0
   materials:
     RawQuartz: 100
@@ -62,6 +64,7 @@
 
 - type: latheRecipe
   id: SheetRPGlass1
+  result: SheetRPGlass1
   completetime: 0
   materials:
     RawQuartz: 100
@@ -81,6 +84,7 @@
 
 - type: latheRecipe
   id: SheetPlasma1
+  result: SheetPlasma1
   completetime: 0
   materials:
     RawPlasma: 100
@@ -94,6 +98,7 @@
 
 - type: latheRecipe
   id: SheetPlasteel1
+  result: SheetPlasteel1
   completetime: 0
   materials:
     RawPlasma: 100
@@ -118,6 +123,7 @@
 
 - type: latheRecipe
   id: SheetUGlass1
+  result: SheetUGlass1
   completetime: 0
   materials:
     RawUranium: 100
@@ -133,6 +139,7 @@
 
 - type: latheRecipe
   id: SheetRUGlass1
+  result: SheetRUGlass1
   completetime: 0
   materials:
     RawUranium: 100
@@ -180,18 +187,21 @@
 
 - type: latheRecipe
   id: SheetUranium1
+  result: SheetUranium1
   completetime: 0
   materials:
     RawUranium: 100
 
 - type: latheRecipe
   id: IngotGold1
+  result: IngotGold1
   completetime: 0
   materials:
     RawGold: 100
 
 - type: latheRecipe
   id: IngotSilver1
+  result: IngotSilver1
   completetime: 0
   materials:
     RawSilver: 100
@@ -206,6 +216,7 @@
 
 - type: latheRecipe
   id: MaterialBananium1
+  result: MaterialBananium1
   completetime: 0
   materials:
     RawBananium: 100
