--- a/Resources/Prototypes/Recipes/Lathes/cargo.yml
+++ b/Resources/Prototypes/Recipes/Lathes/cargo.yml
@@ -1,5 +1,6 @@
 - type: latheRecipe
   id: ConveyorBeltAssembly
+  result: ConveyorBeltAssembly
   completetime: 4
   materials:
     Steel: 500
@@ -7,6 +8,7 @@
 
 - type: latheRecipe
   id: AppraisalTool
+  result: AppraisalTool
   completetime: 4
   materials:
     Steel: 500
