--- a/Resources/Maps/Shuttles/DeltaV/recruiter_ship.yml
+++ b/Resources/Maps/Shuttles/DeltaV/recruiter_ship.yml
@@ -15,6 +15,7 @@ entities:
     components:
     - type: MetaData
     - type: Transform
+      parent: 30
     - type: MapGrid
       chunks:
         0,0:
@@ -107,6 +108,18 @@ entities:
         chunkSize: 4
     - type: GasTileOverlay
     - type: RadiationGridResistance
+  - uid: 30
+    components:
+    - type: MetaData
+      name: Map Entity
+    - type: Transform
+    - type: Map
+      mapPaused: True
+    - type: PhysicsMap
+    - type: GridTree
+    - type: MovedGrids
+    - type: Broadphase
+    - type: OccluderTree
 - proto: AirlockShuttle
   entities:
   - uid: 20
@@ -129,12 +142,32 @@ entities:
     - type: Transform
       pos: 0.5,-0.5
       parent: 1
+- proto: BalloonSyn
+  entities:
+  - uid: 95
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+  - uid: 96
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+  - uid: 97
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
 - proto: BoxFolderBlack
   entities:
   - uid: 75
     components:
     - type: Transform
-      pos: 1.7629633,2.6556866
+      pos: 1.7695078,2.434407
       parent: 1
     - type: Storage
       storedItems:
@@ -153,6 +186,18 @@ entities:
         80:
           position: 4,0
           _rotation: South
+        82:
+          position: 0,1
+          _rotation: South
+        83:
+          position: 1,1
+          _rotation: South
+        84:
+          position: 2,1
+          _rotation: South
+        85:
+          position: 3,1
+          _rotation: South
     - type: ContainerContainer
       containers:
         storagebase: !type:Container
@@ -164,6 +209,49 @@ entities:
           - 78
           - 79
           - 80
+          - 82
+          - 83
+          - 84
+          - 85
+- proto: BriefcaseBrown
+  entities:
+  - uid: 112
+    components:
+    - type: Transform
+      pos: 1.276637,2.4914143
+      parent: 1
+    - type: Storage
+      storedItems:
+        113:
+          position: 4,3
+          _rotation: South
+        114:
+          position: 5,2
+          _rotation: South
+        115:
+          position: 4,2
+          _rotation: South
+        116:
+          position: 5,3
+          _rotation: South
+        117:
+          position: 0,0
+          _rotation: South
+        118:
+          position: 2,0
+          _rotation: South
+    - type: ContainerContainer
+      containers:
+        storagebase: !type:Container
+          showEnts: False
+          occludes: True
+          ents:
+          - 114
+          - 115
+          - 113
+          - 116
+          - 117
+          - 118
 - proto: CableApcExtension
   entities:
   - uid: 41
@@ -276,6 +364,179 @@ entities:
       rot: 3.141592653589793 rad
       pos: 1.7482758,1.5128944
       parent: 1
+- proto: CigPackNewport
+  entities:
+  - uid: 94
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+- proto: CigPackSyndicate
+  entities:
+  - uid: 111
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+- proto: ClothingBackpackSyndicate
+  entities:
+  - uid: 100
+    components:
+    - type: Transform
+      pos: 1.4745537,2.9604897
+      parent: 1
+    - type: Storage
+      storedItems:
+        101:
+          position: 0,0
+          _rotation: South
+        102:
+          position: 1,0
+          _rotation: South
+        103:
+          position: 3,0
+          _rotation: South
+        104:
+          position: 2,0
+          _rotation: South
+        105:
+          position: 4,0
+          _rotation: South
+        106:
+          position: 5,0
+          _rotation: East
+        107:
+          position: 5,1
+          _rotation: East
+        108:
+          position: 0,2
+          _rotation: South
+        109:
+          position: 1,2
+          _rotation: South
+        110:
+          position: 2,2
+          _rotation: South
+        111:
+          position: 3,2
+          _rotation: South
+    - type: ContainerContainer
+      containers:
+        storagebase: !type:Container
+          showEnts: False
+          occludes: True
+          ents:
+          - 102
+          - 105
+          - 106
+          - 107
+          - 108
+          - 109
+          - 110
+          - 111
+          - 101
+          - 104
+          - 103
+    - type: GroupExamine
+      group:
+      - hoverMessage: ""
+        contextText: verb-examine-group-other
+        icon: /Textures/Interface/examine-star.png
+        components:
+        - Armor
+        - ClothingSpeedModifier
+        entries:
+        - message: >-
+            It provides the following protection:
+
+            - [color=orange]Explosion[/color] damage [color=white]to contents[/color] reduced by [color=lightblue]90%[/color].
+          priority: 0
+          component: Armor
+        title: null
+- proto: ClothingEyesGlassesOutlawGlasses
+  entities:
+  - uid: 93
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+- proto: ClothingEyesGlassesSunglasses
+  entities:
+  - uid: 106
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+  - uid: 107
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+- proto: ClothingHeadHatChameleon
+  entities:
+  - uid: 87
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+- proto: ClothingHeadHatOutlawHat
+  entities:
+  - uid: 92
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+- proto: ClothingHeadHatSyndie
+  entities:
+  - uid: 89
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+  - uid: 90
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+- proto: ClothingNeckBling
+  entities:
+  - uid: 91
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+- proto: ClothingNeckScarfStripedSyndieRed
+  entities:
+  - uid: 98
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+  - uid: 99
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
+- proto: ClothingShoesChameleon
+  entities:
+  - uid: 88
+    components:
+    - type: Transform
+      parent: 86
+    - type: Physics
+      canCollide: False
 - proto: ComputerIFFSyndicate
   entities:
   - uid: 55
@@ -305,6 +566,103 @@ entities:
       rot: 3.141592653589793 rad
       pos: 2.5,1.5
       parent: 1
+- proto: CyberPen
+  entities:
+  - uid: 116
+    components:
+    - type: Transform
+      parent: 112
+    - type: Physics
+      canCollide: False
+- proto: Dresser
+  entities:
+  - uid: 86
+    components:
+    - type: Transform
+      pos: -0.5,1.5
+      parent: 1
+    - type: Storage
+      storedItems:
+        87:
+          position: 5,0
+          _rotation: East
+        88:
+          position: 5,1
+          _rotation: South
+        89:
+          position: 2,1
+          _rotation: East
+        90:
+          position: 2,0
+          _rotation: East
+        91:
+          position: 4,0
+          _rotation: South
+        92:
+          position: 0,0
+          _rotation: East
+        93:
+          position: 0,1
+          _rotation: East
+        94:
+          position: 5,3
+          _rotation: East
+        95:
+          position: 4,2
+          _rotation: South
+        96:
+          position: 3,2
+          _rotation: South
+        97:
+          position: 2,2
+          _rotation: South
+        98:
+          position: 1,2
+          _rotation: South
+        99:
+          position: 0,2
+          _rotation: South
+    - type: ContainerContainer
+      containers:
+        storagebase: !type:Container
+          showEnts: False
+          occludes: True
+          ents:
+          - 87
+          - 88
+          - 90
+          - 91
+          - 89
+          - 92
+          - 93
+          - 94
+          - 95
+          - 96
+          - 97
+          - 98
+          - 99
+- proto: EncryptionKeySyndie
+  entities:
+  - uid: 101
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+  - uid: 102
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+- proto: FlippoEngravedLighter
+  entities:
+  - uid: 118
+    components:
+    - type: Transform
+      parent: 112
+    - type: Physics
+      canCollide: False
 - proto: GasPassiveVent
   entities:
   - uid: 63
@@ -410,19 +768,39 @@ entities:
     - type: Transform
       pos: 1.5,0.5
       parent: 1
+- proto: LuxuryPen
+  entities:
+  - uid: 113
+    components:
+    - type: Transform
+      parent: 112
+    - type: Physics
+      canCollide: False
+  - uid: 114
+    components:
+    - type: Transform
+      parent: 112
+    - type: Physics
+      canCollide: False
+  - uid: 115
+    components:
+    - type: Transform
+      parent: 112
+    - type: Physics
+      canCollide: False
 - proto: MaterialWoodPlank
   entities:
   - uid: 66
     components:
     - type: Transform
-      pos: -0.54390144,2.4367337
+      pos: -0.5642064,2.5803413
       parent: 1
 - proto: Multitool
   entities:
   - uid: 67
     components:
     - type: Transform
-      pos: -0.16890144,1.4679838
+      pos: -0.14811105,2.288472
       parent: 1
 - proto: PaperOffice
   entities:
@@ -456,6 +834,30 @@ entities:
       parent: 75
     - type: Physics
       canCollide: False
+  - uid: 82
+    components:
+    - type: Transform
+      parent: 75
+    - type: Physics
+      canCollide: False
+  - uid: 83
+    components:
+    - type: Transform
+      parent: 75
+    - type: Physics
+      canCollide: False
+  - uid: 84
+    components:
+    - type: Transform
+      parent: 75
+    - type: Physics
+      canCollide: False
+  - uid: 85
+    components:
+    - type: Transform
+      parent: 75
+    - type: Physics
+      canCollide: False
 - proto: PoweredLEDSmallLight
   entities:
   - uid: 81
@@ -470,11 +872,6 @@ entities:
     components:
     - type: Transform
       pos: -0.5,2.5
-      parent: 1
-  - uid: 30
-    components:
-    - type: Transform
-      pos: -0.5,1.5
       parent: 1
 - proto: ReinforcedWindow
   entities:
@@ -521,8 +918,16 @@ entities:
   - uid: 65
     components:
     - type: Transform
-      pos: -0.59077644,1.4679838
+      pos: -0.3871231,2.757548
       parent: 1
+- proto: SpaceCash10000
+  entities:
+  - uid: 117
+    components:
+    - type: Transform
+      parent: 112
+    - type: Physics
+      canCollide: False
 - proto: SpawnPointNukies
   entities:
   - uid: 57
@@ -538,6 +943,28 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -1.5,1.5
       parent: 1
+- proto: SyndicatePersonalAI
+  entities:
+  - uid: 105
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+- proto: SyndieHandyFlag
+  entities:
+  - uid: 103
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+  - uid: 104
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
 - proto: TableWood
   entities:
   - uid: 52
@@ -582,6 +1009,28 @@ entities:
     - type: Transform
       pos: -1.5,4.5
       parent: 1
+- proto: ToyFigurineFootsoldier
+  entities:
+  - uid: 108
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+  - uid: 110
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
+- proto: ToyFigurineNukie
+  entities:
+  - uid: 109
+    components:
+    - type: Transform
+      parent: 100
+    - type: Physics
+      canCollide: False
 - proto: WallReinforced
   entities:
   - uid: 2
@@ -631,6 +1080,6 @@ entities:
   - uid: 68
     components:
     - type: Transform
-      pos: -0.16890144,2.6554837
+      pos: -0.116861045,2.4656787
       parent: 1
 ...
