--- a/Resources/Prototypes/Entities/Mobs/Player/narsie.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/narsie.yml
@@ -51,6 +51,8 @@
         hard: false
         restitution: 0.8
         density: 99999
+        mask:
+        - SingularityLayer
         layer:
         - SingularityLayer
       EventHorizonConsumer:
@@ -58,6 +60,8 @@
           !type:PhysShapeCircle
             radius: 5
         hard: false
+        mask:
+        - SingularityLayer
         layer:
         - SingularityLayer
   - type: Input
