--- a/Resources/Prototypes/Entities/Structures/Power/Generation/Singularity/singularity.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/Generation/Singularity/singularity.yml
@@ -30,6 +30,8 @@
         hard: true
         restitution: 0.8
         density: 99999
+        mask:
+        - SingularityLayer
         layer:
         - SingularityLayer
       EventHorizonConsumer:
@@ -37,6 +39,8 @@
           !type:PhysShapeCircle
             radius: 0.35
         hard: false
+        mask:
+        - SingularityLayer
         layer:
         - SingularityLayer
   - type: Singularity
