brosochloric bros, edible/grindable bros, adjusted brosnade

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/randompill.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/randompill.yml
@@ -67,6 +67,7 @@
       - Bleach
       - CarpoToxin
       - BuzzochloricBees
+      - BrosochloricBros
       - Amatoxin
     - quantity: 5
       weight: 2.5
