--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
@@ -767,6 +767,7 @@
     - ChlorineTrifluoride
     - FoamingAgent
     - BuzzochloricBees
+    - BrosochloricBros
     - RobustHarvest
     usefulChemicals:
     - Cryptobiolin
