--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -387,12 +387,12 @@
     - UplinkExplosives
 
 - type: listing
-  id: UplinkBoxBrosGrenade
-  name: uplink-box-bros-grenade-name
-  description: uplink-box-bros-grenade-desc
-  productEntity: BoxBrosGrenade
+  id: UplinkBrosGrenade
+  name: uplink-bros-grenade-name
+  description: uplink-bros-grenade-desc
+  productEntity: BrosGrenade
   cost:
-    Telecrystal: 16
+    Telecrystal: 14
   categories:
     - UplinkExplosives
   conditions:
