--- a/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
@@ -979,3 +979,19 @@
   - type: ConditionalSpawner
     prototypes:
     - MobRaptor
+
+- type: entity
+  name: BROS/SORB Spawner
+  id: BrosSorbSpawner
+  parent: MarkerBase
+  components:
+    - type: Sprite
+      layers:
+        - state: Blue
+        - sprite: Mobs/Animals/bros.rsi
+          state: bros
+    - type: ClusterSpawner
+      prototypes:
+        - MobBros
+        - MobSorb
+          
