--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
@@ -425,7 +425,7 @@
 - type: entity
   parent: SmokeGrenade
   id: BrosGrenade
-  name: brosnade
+  name: BROSnade
   description: UNGH
   components:
   - type: Sprite
