Trying to fix failed check

--- a/Resources/Prototypes/Entities/Objects/Specific/Security/barrier.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Security/barrier.yml
@@ -26,12 +26,16 @@
           !type:PhysShapeCircle
           radius: 0.45
         density: 75
+        hard: true
         mask:
         - MachineMask
+        layer: []
       barrier:
         shape:
           !type:PhysShapeCircle
           radius: 0.45
+        hard: false 
+        mask: []
         layer:
         - WallLayer
   - type: AccessReader
