--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/binary.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/binary.yml
@@ -62,7 +62,10 @@
     range: 5
     sound:
       path: /Audio/Ambience/Objects/gas_pump.ogg
-
+  - type: AtmosMonitoringConsoleDevice
+    group: GasPump
+    rotatable: true
+    
 - type: entity
   parent: GasBinaryBase
   id: GasVolumePump
@@ -111,7 +114,10 @@
       examinableAddress: true
       prefix: device-address-prefix-volume-pump
     - type: WiredNetworkConnection
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasPump
+      rotatable: true
+    
 - type: entity
   parent: GasBinaryBase
   id: GasPassiveGate
@@ -140,7 +146,9 @@
       range: 5
       sound:
         path: /Audio/Ambience/Objects/gas_hiss.ogg
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasValve
+      
 - type: entity
   parent: GasBinaryBase
   id: GasValve
@@ -188,7 +196,9 @@
       range: 5
       sound:
         path: /Audio/Ambience/Objects/gas_hiss.ogg
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasValve
+      
 - type: entity
   parent: GasBinaryBase
   id: SignalControlledValve
@@ -246,7 +256,9 @@
     range: 5
     sound:
       path: /Audio/Ambience/Objects/gas_hiss.ogg
-
+  - type: AtmosMonitoringConsoleDevice
+    group: GasValve
+      
 - type: entity
   parent: GasBinaryBase
   id: GasPort
@@ -275,7 +287,9 @@
     - type: Construction
       graph: GasBinary
       node: port
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasOpening
+      
 - type: entity
   parent: GasVentPump
   id: GasDualPortVentPump
@@ -331,7 +345,9 @@
           pipeDirection: South
     - type: AmbientSound
       enabled: true
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasOutlet
+      
 - type: entity
   parent: [ BaseMachine, ConstructibleMachine ]
   id: GasRecycler
@@ -393,7 +409,9 @@
         acts: ["Destruction"]
   - type: Machine
     board: GasRecyclerMachineCircuitboard
-
+  - type: AtmosMonitoringConsoleDevice
+    group: Thermoregulator
+    
 - type: entity
   parent: GasBinaryBase
   id: HeatExchanger
