--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
@@ -68,7 +68,9 @@
       sound:
         path: /Audio/Ambience/Objects/gas_vent.ogg
     - type: Weldable
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasOutlet
+      
 - type: entity
   parent: GasUnaryBase
   id: GasPassiveVent
@@ -92,7 +94,9 @@
     - type: Construction
       graph: GasUnary
       node: passivevent
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasOpening
+      
 - type: entity
   parent: [GasUnaryBase, AirSensorBase]
   id: GasVentScrubber
@@ -141,7 +145,9 @@
       sound:
         path: /Audio/Ambience/Objects/gas_vent.ogg
     - type: Weldable
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasInlet
+      
 - type: entity
   parent: GasUnaryBase
   id: GasOutletInjector
@@ -180,7 +186,9 @@
       visibleLayers:
       - enum.SubfloorLayers.FirstLayer
       - enum.LightLayers.Unshaded
-
+    - type: AtmosMonitoringConsoleDevice
+      group: GasOutlet
+      
 - type: entity
   parent: [ BaseMachinePowered, ConstructibleMachine ]
   id: BaseGasThermoMachine
@@ -224,7 +232,9 @@
       examinableAddress: true
     - type: WiredNetworkConnection
     - type: PowerSwitch
-
+    - type: AtmosMonitoringConsoleDevice
+      group: Thermoregulator
+      
 - type: entity
   parent: BaseGasThermoMachine
   id: GasThermoMachineFreezer
