Remove fake centcom stuff (#30747)
* Remove fake centcom stuff

* forgor

* bruh

* FUCK TOOLBOX

* weh??

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -409,3 +409,9 @@ ClothingBeltSuspenders: ClothingBeltSuspendersRed
 
 # 2024-08-19
 ClothingNeckShockCollar: ClothingBackpackElectropack
+
+# 2024-08-28
+ClothingBackpackDuffelSyndicateCostumeCentcom: null
+ClothingHeadsetAltCentComFake: null
+CentcomPDAFake: null
+CentcomIDCardSyndie: null
