Completely decoupled all aspects of the rat king from each other into individual components, and put them in the proper places in the folder structure, along with the required renaming.

--- a/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
@@ -115,7 +115,7 @@
     hungerPerArmyUse: 25
   - type: RatKingDomain
     hungerPerDomainUse: 50
-  - type: RatKing
+  - type: RatKingRummager
   - type: MobsterAccent
   - type: Speech
     speechVerb: SmallMob
