Revert "1984 shuttles to new pr 2 electric boogaloo"
This reverts commit b2ea7053b73cb17b59f8a80b23978a04a6a45a56.

--- a/Resources/Prototypes/Catalog/Fills/Items/misc.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/misc.yml
@@ -17,6 +17,12 @@
   - ClothingShoesBootsSecFilled
 
 - type: entity
+  id: ClothingShoesBootsCowboyBlackFilled
+  parent:
+  - ClothingShoesBootsCowboyBlack
+  - ClothingShoesBootsSecFilled
+
+- type: entity
   id: ClothingShoesHighheelBootsFilled
   parent:
   - ClothingShoesHighheelBoots
@@ -34,24 +40,40 @@
 
 - type: entity
   id: ClothingShoesBootsCowboyBrownFilled
-  parent:
-  - ClothingShoesBootsCowboyBrown
-  - ClothingShoesBootsSecFilled
+  parent: ClothingShoesBootsCowboyBrown
+  suffix: Filled
+  components:
+  - type: ContainerFill
+    containers:
+      item:
+      - CombatKnife
 
 - type: entity
   id: ClothingShoesBootsCowboyBlackFilled
-  parent:
-  - ClothingShoesBootsCowboyBlack
-  - ClothingShoesBootsSecFilled
+  parent: ClothingShoesBootsCowboyBlack
+  suffix: Filled
+  components:
+  - type: ContainerFill
+    containers:
+      item:
+      - CombatKnife
 
 - type: entity
   id: ClothingShoesBootsCowboyWhiteFilled
-  parent:
-  - ClothingShoesBootsCowboyWhite
-  - ClothingShoesBootsSecFilled
+  parent: ClothingShoesBootsCowboyWhite
+  suffix: Filled
+  components:
+  - type: ContainerFill
+    containers:
+      item:
+      - CombatKnife
 
 - type: entity
   id: ClothingShoesBootsCowboyFancyFilled
-  parent:
-  - ClothingShoesBootsCowboyFancy
-  - ClothingShoesBootsSecFilled
+  parent: ClothingShoesBootsCowboyFancy
+  suffix: Filled
+  components:
+  - type: ContainerFill
+    containers:
+      item:
+      - CombatKnife
