--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -65,3 +65,201 @@
   - type: LoadMapRule
     preloadedGrid: SyndieEvacPod
 
+- type: entity
+  id: UnknownShuttleNTQuark
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: null # It should be silent.
+    weight: .5 # Hopefully this is uncommon enough, it needs to be uncommon enough that people wont waste time metaknowledging it.
+    earliestStart: 45 # late to hopefully have enough ghosts to fill all roles quickly.
+    minimumPlayers: 25
+  - type: LoadMapRule
+    preloadedGrid: NTQuark
+
+- type: entity
+  id: UnknownShuttleBang
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Bang
+
+- type: entity
+  id: UnknownShuttleCruiser
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Cruiser
+
+- type: entity
+  id: UnknownShuttleCryptid
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Cryptid
+
+- type: entity
+  id: UnknownShuttleDrone
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Drone
+
+- type: entity
+  id: UnknownShuttleEternal
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Eternal
+
+- type: entity
+  id: UnknownShuttleFlatline
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Flatline
+
+- type: entity
+  id: UnknownShuttleGym
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Gym
+
+- type: entity
+  id: UnknownShuttleHook
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Hook
+
+- type: entity
+  id: UnknownShuttleNTIncorporation
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 1 # Its just a big ship, so it needs to be rarer to be interesting.
+    earliestStart: 45 # late to hopefully have enough ghosts to fill all roles quickly. (5-6)
+  - type: LoadMapRule
+    preloadedGrid: NTIncorporation
+
+- type: entity
+  id: UnknownShuttleInstigator
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 1 #  lower because antags.
+    earliestStart: 50 # late to hopefully have enough ghosts to fill all roles quickly, and because antags
+  - type: LoadMapRule
+    preloadedGrid: Instigator
+
+- type: entity
+  id: UnknownShuttleJoe
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Joe
+
+- type: entity
+  id: UnknownShuttleLambordeere
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Lambordeere
+
+- type: entity
+  id: UnknownShuttleManOWar
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: .5 # lower because antags
+    earliestStart: 50 # late to hopefully have enough ghosts to fill all roles quickly. (4)
+  - type: LoadMapRule
+    preloadedGrid: ManOWar
+
+- type: entity
+  id: UnknownShuttleMeatZone
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Meatzone
+
+- type: entity
+  id: UnknownShuttleMicroshuttle
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 4
+    maxOccurrences: 10
+  - type: LoadMapRule
+    preloadedGrid: Microshuttle
+
+- type: entity
+  id: UnknownShuttleRaider
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: .5 # lower because antags
+    earliestStart: 45 # late to hopefully have enough ghosts to fill all roles quickly.
+  - type: LoadMapRule
+    preloadedGrid: Raider
+
+- type: entity
+  id: UnknownShuttleScooner
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 1 # lower because antags
+    earliestStart: 35 # late to hopefully have enough ghosts to fill all roles quickly. (3)
+  - type: LoadMapRule
+    preloadedGrid: Scooner
+
+- type: entity
+  id: UnknownShuttleSpacebus
+  parent: BaseUnknownShuttleRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-unknown-shuttle-incoming #!!
+    weight: 2
+  - type: LoadMapRule
+    preloadedGrid: Spacebus
+
