--- a/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
@@ -90,7 +90,8 @@
     makeSentient: true
     name: ghost-role-information-rat-king-name
     description: ghost-role-information-rat-king-description
-    rules: ghost-role-information-freeagent-rules    raffle:
+    rules: ghost-role-information-freeagent-rules
+    raffle:
       settings: default
   - type: GhostTakeoverAvailable
   - type: Tag
